# dynamic_onboarding

./: Makefile  README.md  pyproject.toml
infra/: .env.example  docker-compose-start.yml  docker-compose.dev.yml  docker-compose.yml
src/api/: urls.py
src/api/v1/: filters.py  paginations.py  serializers.py  urls.py  views.py
src/config/: settings.py  urls.py  views.py
src/core/: constants.py  middleware.py  models.py
src/core/context_processors/: user_processors.py
src/core/management/commands/: test_data.py
src/onboarding/: admin.py  apps.py  constants.py  fields.py  forms.py  inlines.py  models.py  urls.py  views.py
src/onboarding/migrations/: 0001_initial.py
src/static/css/: main.css
src/static/js/: inlines.js
src/templates/: base.html
src/templates/admin/: change_form.html
src/templates/includes/: footer.html  header.html  onboarding.html  registration_authorization.html
src/templates/onboarding/: index.html
src/users/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_email.py
